assets/sass/main.scss
html, body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;

  //line-height: 1.3;
  //font-size: 0.95rem;
  //font-size: 16px;
}

* {
    font-family : inherit !important;
}

/*
 *
 * Bulma fixes
 *
 */

#body {
    // FIX the fix-top-navbar padding (for the #mainPane}
    padding-top: calc(#{$navbar-height} - 0.5rem ) !important; // why - 0.5 ? mystery

    // For discrete footer.
    min-height: calc(100vh - #{$navbar-height}) !important;

    @include until($desktop) {
        padding-left: 10px !important;
        padding-right: 10px !important;
    }
}

hr {
    height: 1px !important;
    &.is-2 {
        height: 2px !important
    }
    &.is-3 {
        height: 4px !important
    }
}

.column {
    /*  Fix/scrollable column */
    &.is-fullheight {
        min-height: calc(100vh - #{$navbar-height} + #{$size-small});
        max-height: calc(100vh - #{$navbar-height} + #{$size-small});
        height:     calc(100vh - #{$navbar-height} + #{$size-small});
        //display: flex;
        //flex-direction: row;
        //justify-content: stretch;

        overflow-y: auto;
    }


    /* add a margin-top only when item are wrapped */
    &.flex-gap {
        display: inline-flex;
        flex-wrap: wrap;
        gap: 8px;
    }
}

.form {
    .field-label {
        flex-grow: 1;
    }
}

.help-label {
  //font-family: bold !important;
  color: $grey !important;
  display: block !important;
  font-size: $help-size !important;
  margin-top: 0.25rem !important;
}
.help {
  color: $grey-light !important;
}
.is-grey {
    color: $grey !important;
}
.is-grey-light {
    color: $grey-light2 !important;
}
.is-bg-grey {
    background-color: $grey !important;
}
.is-bg-grey-light {
    background-color: $grey-light2 !important;
}
.has-links-light {
    a {
        color: $blue-light;
    }
}

.is-md {
    font-size: 0.9rem !important;
}

.is-transparent {
	opacity: 0;
    z-index: -1;
}

.do-clear {
    animation: fadeOut 0.5s;
}

.is-flex-grow {
	flex-grow: 1 !important;
}

.is-aligned-center {
    text-align: center !important;
}
.is-aligned-left {
    text-align: left !important;
}
.is-aligned-right {
    text-align: right !important;
}

.is-underline {
    //text-decoration: underline;
    border-bottom: 1px ridge;
}

.is-underline-dotted {
    border-bottom: 1px dotted;
}

.is-crossed {
    text-decoration: line-through;
}

.is-strong {
    font-weight: bold;
}

.icon {
    color: #11111133 !important;
}

.icon-padding-left {
    padding-left: 8px !important;
}


.icon-padding-right {
    padding-right: 8px;
}

.text-status {
    margin: 0 1rem 0 1rem !important;
    font-style: italic !important;
}

.has-text-weight-light {
    a:hover {
        font-weight: initial;
    }
}


.is-smaller {
    font-size: 88% !important;
}
.is-smaller2 {
    font-size: 80% !important;
}

// Tooltip

.tooltip.has-tooltip-multiline::before {
  white-space: pre-line !important;
}

.tooltip {
    // Tooltip has fadin, and no fadout
    transition: none !important;
    transition-delay: none !important;

    &.has-tooltip-active,
    &:focus,
    &:hover {
        &::after,
        &::before {
            transition: all .15s linear !important;
            transition-delay: $tooltip-transition-duration !important;
        }
    }
}

.badge {
    right: 6px;
    top: 6px;
    //
    height: 8px;
    border-radius: 8px;
    min-width: 8px;
    box-shadow: none;
}

.box.is-light, .modal-card-body  {
    a {
        color: $blue !important;
    }
}


.arrow {
	border: solid;
	border-width: 0 3px 3px 0;
	display: inline-block;
	padding: 3px;

	&.right {
		transform: rotate(-45deg);
		-webkit-transform: rotate(-45deg);
	}

	&.left {
		transform: rotate(135deg);
		-webkit-transform: rotate(135deg);
	}

	&.up {
		transform: rotate(-135deg);
		-webkit-transform: rotate(-135deg);
	}

	&.down {
		transform: rotate(45deg);
		-webkit-transform: rotate(45deg);
		margin-bottom: 2px;
	}
}

.dropdown-content {
    max-height: 280px;
    overflow: auto;
}

.dropdown-menu.is-right {
	left: auto;
	right: 0;
}


// Media

.media.is-small {
    font-size: 0.9rem !important;
}

// Modal

html.has-modal-active, html.has-modal-active2 {
    overflow: hidden !important;
    padding-right: 14px; /* Avoid width reflow */

    .tabs:not(.modal-content .tabs) {
        overflow: hidden;
    }
}
#navbarTop.has-modal-active, #navbarTop.has-modal-active2 {
    .navbar {
        padding-right: 14px; /* Avoid width reflow */
    }
}

.dropdown-menu {
    min-width: 7rem !important;
    width: max-content;
    max-width: 330px;
}


.tabs {
	&.is-boxed {
		a {
			padding-right: 1rem !important;
			padding-left: 1rem !important;
		}
    }
}

.no-overflow {
    overflow: hidden !important;
}

.has-background-turquoise {
    background-color: $turquoise !important;
}
.has-background-grey-light2 {
    background-color: $grey-light2 !important;
}
.has-text-turquoise {
    color: $turquoise !important;
}

.input.has-background-grey {
    background-color: $grey-light2 !important;
}

.box {
    border: 1px solid $grey-darker !important;
    .media {
        &.is-active {
            border: solid 2px $link !important;
        }

        & + .media {
            border-top: 1px solid $grey-darker !important;
        }
    }

    &.is-shrinked {
        padding: 0;
        .media {
            margin: 0;
            padding: 1rem 1.25rem 1rem 0.9rem;
        }
    }

    &.is-shrinked2 {
        padding: 0;
        .media {
            margin: 0;
            padding: 0.5rem 0.7rem;
        }
    }
}

.box.has-background-light {
    label {color: $grey;}
    color: black;
}

.bulma-issue-33 { // found in the archived repo bulma-tooltip of wikiki
    @include desktop {
        &:hover {
            overflow: visible !important;
        }
    }
}

/*
 *
 * My style
 *
 */

.menu .menu-label {
    font-weight: bold !important;
}
/* ... */

